# demo-lexgib

./: .dockerignore  .gitignore  .slugignore  Dockerfile  Procfile  README.md  README.txt  fly.toml  main.py  pyproject.toml  requirements.txt  start.sh  test_main.py
storage/: docstore.json  index_store.json
