[tool.poetry]
name = "llamaindex-app"
version = "0.1.0"
description = "A FastAPI server using LlamaIndex"
authors = ["Andy <andy@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "<2.10"
aiostream = "^0.5.2"
docx2txt = "^0.8"
numpy = "1.26.4"
llama-index = "^0.12.37"
llama-index-core = "^0.12.28"
llama-index-server = "^0.1.16"
llama-index-llms-openai = "^0.3.2"
llama-index-embeddings-openai = "^0.3.1"
llama-index-agent-openai = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
